first fatoramento  entre dashboard, menu e ordens

--- a/orders.css
+++ b/orders.css
@@ -40,6 +40,7 @@ header h1 {
 }
 
 .order-item {
+    border: 1px solid #ddd;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -48,6 +49,22 @@ header h1 {
     width: 100%;
     max-width: 600px;
     text-align: center;
+}
+
+.order-item h3 {
+    margin-bottom: 1rem;
+    font-size: 1.4rem;
+}
+
+.order-item p {
+    font-size: 1.2rem;
+    margin-bottom: 0;
+}
+
+.order-item p span {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #2a5492;
 }
 
 .submit-button {
